--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -15,6 +15,23 @@
  */
 
 
+
+
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 /* Make nav bar dark like the background of the hero image container */
 .fixedHeaderContainer {
     background: $secondaryColor;
