--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -15,8 +15,30 @@
  */
 
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0;
+    /* overflow-x: hidden; */ /*for some reason this make scrolling choppy on iOS*/
+}
 
 
+.section-images {
+  margin: auto 2em;
+  text-align: center;
+}
+img {
+  display: block;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 90%;
+  margin: 0 auto;
+}
+
+/* Makes YouTube video scale better*/
 .videoWrapper {
     position: relative;
     padding-bottom: 56.25%; /* 16:9 */
